# jaxmod

./: README.md  pyproject.toml  pyrightconfig.json
docs/: conf.py
jaxmod/: __init__.py  solver.py  solvers.py  type_aliases.py  utils.py
tests/: test_solvers.py
